template/trinity-large-preview:free-sec/row_51_update_5_template_20260324_224817.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Web Server Infrastructure with ALB and Auto Scaling Group

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Default: vpc-00000000000000000
  Subnets:
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-00000000000000000,subnet-00000000000000001
  InstanceType:
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t3.small
      - t3.medium
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: my-key-pair
  MinSize:
    Type: Number
    Default: 2
  MaxSize:
    Type: Number
    Default: 6
  DesiredCapacity:
    Type: Number
    Default: 2

Resources:
  WebServerRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  WebServerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref WebServerRole

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        IamInstanceProfile:
          Name: !Ref WebServerInstanceProfile
        ImageId:
          Fn::ImportValue:
            !Sub '${AWS::Region}/AMIID'
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyName
        UserData:
          Fn::Base64:
            Fn::Join:
              - ''
              - - '#!/bin/bash -xe\n'
                - 'yum update -y\n'
                - 'yum install -y httpd\n'
                - 'systemctl start httpd\n'
                - 'systemctl enable httpd\n'
                - 'echo "<html><body><h1>Web Server Instance '
                - !Ref 'AWS::StackName'
                - '</h1><p>Instance ID: '
                - !Ref 'AWS::InstanceId'
                - '</p></body></html>" > /var/www/html/index.html\n'

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic from ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId:
            Fn::GetAtt:
              - ApplicationLoadBalancer
              - SecurityGroups
              - '0'

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets: !Ref Subnets
      SecurityGroups:
        - Fn::GetAtt:
            - ALBSecurityGroup
            - GroupId

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic from internet
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VpcId
      Port: 80
      Protocol: HTTP
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckPort: '80'
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref Subnets
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      MinSize: !Ref MinSize
      MaxSize: !Ref MaxSize
      DesiredCapacity: !Ref DesiredCapacity
      TargetGroupARNs:
        - !Ref TargetGroup

Outputs:
  LoadBalancerDNSName:
    Description: DNS name of the Application Load Balancer
    Value: !GetAtt ApplicationLoadBalancer.DNSName
  LoadBalancerURL:
    Description: URL to access the web application
    Value:
      Fn::Join:
        - ''
        - - 'http://'
          - Fn::GetAtt:
              - ApplicationLoadBalancer
              - DNSName
